--- a/src/template.html
+++ b/src/template.html
@@ -43,7 +43,7 @@
         <div class="NavigationMenu__StyledNav-vi57nt-0 ewTqJu">
           <div class="logo"><a aria-current="page" class="MainLogo__StyledMainLogo-sc-99w9xy-0 cJPfds"
               href="https://skinnerpasta.com/"><img
-                src="https://cdn.skinnerpasta.com/resources/skinnerpasta/images/logo2.png"
+                src="https://cdn.creamette.com/resources/creamette/images/logo.png"
                 alt="Skinner® - Red, White and True Blue for over 100 Years"></a></div>
           <ul class="MainNav__StyledMainNav-sc-8p6gb6-0 bdfOsg">
 
@@ -262,19 +262,19 @@
       <div class="TopFootContainer">
         <div class="logo"><a aria-current="page" class="FooterLogo__StyledLogo-dq9wud-0 UqIWz"
             href="https://www.skinnerpasta.com/"><img
-              src="https://cdn.skinnerpasta.com/resources/skinnerpasta/images/logo2.png"></a>
+              src="https://cdn.creamette.com/resources/creamette/images/logo.png"></a>
         </div>
         <div class="links">
           <ul class="FooterNav__StyledFooterNav-sc-1nwkrra-0 dhFkRs">
-            <li class="products"><a href="https://www.skinnerpasta.com/en-us/content/26179/Products.aspx">Products</a></li>
-            <li class="recipes"><a href="https://www.skinnerpasta.com/en-us/recipes/search/default.aspx">Recipes</a></li>
-            <li class="about"><a href="https://www.skinnerpasta.com/en-us/common_pages/3095/About.aspx">About</a></li>
-            <li class="wtb"><a href="https://www.skinnerpasta.com/en-US/content/29946/WheretoBuy.aspx">Where to Buy</a></li>
+            <li class="products"><a href="https://www.creamette.com/en-us/content/27328/Products.aspx">Products</a></li>
+            <li class="recipes"><a href="https://www.creamette.com/en-us/recipes/search/default.aspx">Recipes</a></li>
+            <li class="about"><a href="https://www.creamette.com/en-us/common_pages/3095/About.aspx">About</a></li>
+            <li class="wtb"><a href="https://www.creamette.com/en-US/content/29943/WheretoBuy.aspx">Where to Buy</a></li>
           </ul>
         </div>
         <div class="social">
           <ul class="SocialMedia__StyledSocial-y0c5d5-0 dAVbGL">
-            <li class="facebookLink"><a href="https://www.facebook.com/skinnerpasta/" target="_blank"
+            <li class="facebookLink"><a href="https://www.facebook.com/Creamette-Pasta-265866310421133/" target="_blank"
                 rel="noopener noreferrer"><svg aria-hidden="true" focusable="false" data-prefix="fab"
                   data-icon="facebook-f" class="svg-inline--fa fa-facebook-f fa-w-9 fa-2x " role="img"
                   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512" style="width:20px;height:32px">
@@ -290,7 +290,7 @@
                     d="M496 256c0 137-111 248-248 248-25.6 0-50.2-3.9-73.4-11.1 10.1-16.5 25.2-43.5 30.8-65 3-11.6 15.4-59 15.4-59 8.1 15.4 31.7 28.5 56.8 28.5 74.8 0 128.7-68.8 128.7-154.3 0-81.9-66.9-143.2-152.9-143.2-107 0-163.9 71.8-163.9 150.1 0 36.4 19.4 81.7 50.3 96.1 4.7 2.2 7.2 1.2 8.3-3.3.8-3.4 5-20.3 6.9-28.1.6-2.5.3-4.7-1.7-7.1-10.1-12.5-18.3-35.3-18.3-56.6 0-54.7 41.4-107.6 112-107.6 60.9 0 103.6 41.5 103.6 100.9 0 67.1-33.9 113.6-78 113.6-24.3 0-42.6-20.1-36.7-44.8 7-29.5 20.5-61.3 20.5-82.6 0-19-10.2-34.9-31.4-34.9-24.9 0-44.9 25.7-44.9 60.2 0 22 7.4 36.8 7.4 36.8s-24.5 103.8-29 123.2c-5 21.4-3 51.6-.9 71.2C65.4 450.9 0 361.1 0 256 0 119 111 8 248 8s248 111 248 248z">
                   </path>
                 </svg></a></li>
-            <li class="instagramLink"><a href="https://www.instagram.com/skinnerpasta/" target="_blank"
+            <li class="instagramLink"><a href="" target="_blank"
                 rel="noopener noreferrer"><svg aria-hidden="true" focusable="false" data-prefix="fab"
                   data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14 fa-2x " role="img"
                   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="width:32px;height:32px">
@@ -306,7 +306,7 @@
                     d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z">
                   </path>
                 </svg></a></li>
-            <li class="youTubeLink"><a href="https://www.youtube.com/channel/UCVB6G4fR9eC7Dy4hlkky69A" target="_blank"
+            <li class="youTubeLink"><a href="https://www.youtube.com/user/ItPaysToEatPasta" target="_blank"
                 rel="noopener noreferrer"><svg aria-hidden="true" focusable="false" data-prefix="fab"
                   data-icon="youtube" class="svg-inline--fa fa-youtube fa-w-18 fa-2x " role="img"
                   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" style="width:32px;height:32px">
@@ -322,10 +322,10 @@
     <div class="BottomFooter__Div-pmhg9e-0 czIBPk">
       <div class="BottomFootContainer">
         <ul class="UtilityLink__StyledUtilityLink-l390ck-0 vaYVj">
-          <li><a href="https://www.skinnerpasta.com/en-US/content/26184/FAQs.aspx">FAQs</a></li>
-          <li><a href="https://www.skinnerpasta.com/en-US/common_pages/3097/PrivacyPolicy.aspx">Privacy Policy</a></li>
-          <li><a href="https://www.skinnerpasta.com/en-US/common_pages/3098/TermsofUse.aspx">Terms of Use</a></li>
-          <li><a href="https://www.skinnerpasta.com/en-us/contact_us/default.aspx">Contact Us</a></li>
+          <li><a href="https://www.creamette.com/en-us/content/27332/FAQs.aspx">FAQs</a></li>
+          <li><a href="https://www.creamette.com/en-US/common_pages/3097/PrivacyPolicy.aspx">Privacy Policy</a></li>
+          <li><a href="https://www.creamette.com/en-US/common_pages/3098/TermsofUse.aspx">Terms of Use</a></li>
+          <li><a href="https://www.creamette.com/en-us/contact_us/default.aspx">Contact Us</a></li>
         </ul>
         <div class="CopyRight__StyledCopyRight-ifnkvb-0 bUREws">© 2019 Riviana Foods Inc.</div>
       </div>
